--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "site-react",
+  "name": "chakra-dm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.22",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
+    "scrollreveal": "^4.0.9",
+    "swiper": "^7.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
